Refactored InstantorPlugin. Added batch for recursive branch loader.