@@ -1,68 +1,28 @@
 @echo off
-setlocal
-pushd
-cd "%~dp0"
+setlocal enabledelayedexpansion 
 
-set JVM_PARAMS=-DSandbox.branch=master -Xss2m -Xms2g -Xmx2g -XX:+TieredCompilation -XX:ReservedCodeCacheSize=256m -XX:MaxPermSize=512m -XX:+CMSClassUnloadingEnabled -XX:+UseNUMA -XX:+UseParallelGC -Dscalac.patmat.analysisBudget=off
+pushd %~dp0
+call :load_branches
 
-set LOG_LEVEL=
-set NO_PAUSE=false
-set DO_LOOP=false
+java %branches% -Xss2m -Xms2g -Xmx2g -jar project\strap\gruj_vs_sbt-launch-0.13.x.jar %*
 
-:PARSER_LOOP
-if "%~1"=="" goto :PARSER_END
-
-if "%~1"=="--jvm" (
-  echo Setting JVM param [%~2]
-  set JVM_PARAMS=%JVM_PARAMS% -D%~2
-  shift
-  goto :PARSER_CONTINUE
-)
-
-if "%~1"=="--debug" (
-  echo "Setting debug mode"
-  set LOG_LEVEL="set logLevel:=Level.Debug"
-  goto :PARSER_CONTINUE
-)
-
-if "%~1"=="--prod" (
-  echo Setting production mode
-  set LOG_LEVEL="set logLevel:=Level.Info"
-  goto :PARSER_CONTINUE
-)
-
-if "%~1"=="--loop" (
-  echo Will run SBT in loop mode
-  set DO_LOOP=true
-  goto :PARSER_CONTINUE
-)
-
-if "%~1"=="--no-pause" (
-  echo Will not pause in loop mode
-  set NO_PAUSE=true
-  goto :PARSER_CONTINUE
-)
-
-set SBT_PARAMS=%SBT_PARAMS% %1
-
-:PARSER_CONTINUE
-shift
-goto :PARSER_LOOP
-:PARSER_END
-
-set GRUJ_PATH=project/strap/gruj_vs_sbt-launch-0.13.x.jar
-set RUN_CMD=java %JVM_PARAMS% -jar %GRUJ_PATH% %LOG_LEVEL% %SBT_PARAMS%
-
-:RUN_LOOP
-%RUN_CMD%
-
-if %DO_LOOP%.==true. (
-  if %NO_PAUSE%.==false. (
-    echo Press Enter to continue or Press CTRL+C to exit!
-    pause
-  )
-  goto :RUN_LOOP
-)
-
-popd
+popd 
 endlocal
+goto :EOF
+
+:push_descend
+pushd "%OLD_DIR%.."
+if %CD%\==%OLD_DIR% popd & goto :EOF
+call :load_branches
+popd
+goto :EOF
+
+:load_branches
+set OLD_DIR=%CD%\
+call :push_descend
+for %%a in ("%CD%\*.branch") do (
+  set /p current=<"%%~fa"
+  echo Found %%~fa = !current!
+  set branches=!branches! -D%%~nxa="!current!"
+) 
+goto :EOF
